Changes in @NEW@:
  o Client Changes:
    * The OpenPGP implementation now merges PGP keys properly.
      (CNY-1987)
    * The OpenPGP implementation is capable of generating trust
      signatures. (CNY-1990)

  o Build Changes:
    * MakeDirs now handles trailing '/' characters on directory names.
      (CNY-1526)
    * In a UserGroupRecipe, you can now specify that the user's primary
      group needs to be already on the system rather than be added while
      creating the user, using the new provideGroup keyword argument
      to the r.User() method. (CNY-2096)

  o Bug Fixes:
    * A bug that resulted in a KeyError when removing a trove from a
      group that has 3 levels of subgroups has been fixed. (CNY-1372)
    * A bug that could result in a decremented source count when promoting
      a package to a sibling of a parent branch has been fixed. (CNY-2108)
    * A problem resulting in derived packages corrupting files with the
      same content was fixed. (CNY-2157)
    * A bug that caused internal server errors when retrieving
      changeset that contained compressed file data over 4 GiB in size
      has been fixed. (CNY-2170, CNY-2173)

Changes in 1.2.4:
  o Bug Fixes:
    * A file that was mistakenly ommitted from packaging has been
      added to the build. (CNY-2155)

Changes in 1.2.3:
  o Build Changes:
    * The addSvnSnapshot() source action now has the ability to add
      specific SVN revisions via the 'revision' argument. (CNY-2156)
  o Bug Fixes:
    * An update failure that would occur when two versions of a package
      have been installed, one local, one from a repository, has been
      fixed. (CNY-2127)
    * A regression introduced in 1.2.1 affecting patch files that apply
      multiple changes to the same file has been fixed. (CNY-2142)
    * Group scripts now have file descriptor 0 (stdin) connected to
      /dev/null. Previously, stdin was closed, a potential problem