@@ -586,13 +586,41 @@ order by
 
 	return theId
 
-    def addTrove(self, trove, pin = False):
+    def _findTroveInstanceId(self, cu, name, version, flavor):
+        if flavor.isEmpty():
+            flavorStr = "IS NULL"
+        else:
+            flavorStr = "= '%s'" % flavor.freeze()
+
+        cu.execute("""
+        SELECT instanceId
+        FROM Instances
+        JOIN Versions USING (versionId)
+        JOIN Flavors ON (Instances.flavorId = Flavors.flavorId)
+        WHERE Instances.troveName = ?
+        AND Versions.version = ?
+        AND Flavors.flavor %s
+        """ % flavorStr, name, str(version))
+
+        rows = list(cu)
+
+        if not len(rows):
+            raise errors.TroveNotFound
+
+        return rows[0][0]
+
+    def addTrove(self, trove, pin = False, oldTroveSpec = None):
 	cu = self.db.cursor()
 
 	troveName = trove.getName()
 	troveVersion = trove.getVersion()
 	troveVersionId = self.getVersionId(troveVersion, {})
 	self.addVersionCache[troveVersion] = troveVersionId
+
+        if oldTroveSpec is not None:
+            oldTroveId = self._findTroveInstanceId(cu, *oldTroveSpec)
+        else:
+            oldTroveId = None
 
 	troveFlavor = trove.getFlavor()
         if not troveFlavor.isEmpty():
@@ -749,7 +777,7 @@ order by
                                       stream, isPresent)
                         VALUES (?, ?, ?, ?, ?, ?)""")
 
-	return (cu, troveInstanceId, stmt)
+	return (cu, troveInstanceId, stmt, oldTroveId)
 
     def _sanitizeTroveCollection(self, cu, instanceId, nameHint = None):
         # examine the list of present, missing, and not inPristine troves
@@ -852,7 +880,7 @@ order by
 
     def addFile(self, troveInfo, pathId, fileObj, path, fileId, fileVersion,
                 fileStream = None, isPresent = True):
-	(cu, troveInstanceId, addFileStmt) = troveInfo
+	(cu, troveInstanceId, addFileStmt, oldInstanceId) = troveInfo
 	versionId = self.getVersionId(fileVersion, self.addVersionCache)
 
 	if fileObj or fileStream:
@@ -871,13 +899,13 @@ order by
                 cu.executemany("INSERT INTO NewFileTags VALUES (?, ?)",
                                itertools.izip(itertools.repeat(pathId), tags))
 	else:
-	    cu.execute("""
-		UPDATE DBTroveFiles SET instanceId=?, isPresent=? WHERE
-		    fileId=? AND pathId=? AND versionId=?""",
-                    troveInstanceId, isPresent, fileId, pathId, versionId)
+            cu.execute("""
+                UPDATE DBTroveFiles SET instanceId=?, isPresent=? WHERE
+                    pathId=? AND instanceId=?""",
+                    troveInstanceId, isPresent, pathId, oldInstanceId)
 
     def addTroveDone(self, troveInfo):
-	(cu, troveInstanceId, addFileStmt) = troveInfo
+	(cu, troveInstanceId, addFileStmt, oldInstanceId) = troveInfo
 
         cu.execute("""
             INSERT INTO DBTroveFiles (pathId, versionId, path, fileId,
